<resources>
  <string name="app_name">AndroidTechSample</string>

  <!-- PlaygroundFragment -->
  <string name="playground_label">Playground</string>
  <string name="playground_label_layout">Layout</string>
  <string name="playground_label_list">List</string>
  <string name="playground_label_other">Other</string>
  <string name="playground_label_compose">Jetpack Compose</string>
  <string name="playground_biometric">Biometric</string>
  <string name="playground_motion_layout">MotionLayout</string>
  <string name="playground_groupie_view">GroupieView</string>
  <string name="playground_span_view">SpanView</string>
  <string name="playground_notification_view">NotificationView</string>
  <string name="playground_camera_view">CameraView</string>
  <string name="playground_hello_view">HelloView</string>
  <string name="playground_permission_camera">カメラの許可をしてください</string>
  <string name="playground_list_view">ListView</string>

  <!-- BiometricFragment -->
  <string name="biometric_label">@string/playground_biometric</string>
  <string name="biometric_fingerprint_authentication">指紋認証</string>

  <!-- MotionFragment -->
  <string name="motion_label">@string/playground_motion_layout</string>
  <string name="motion_top_swipe_name">Name</string>
  <string name="motion_top_swipe">TopSwipe</string>
  <string name="motion_side_swipe">SideSwipe</string>
  <string name="motion_custom_view">CustomView</string>
  <string name="motion_key_position">KeyPosition</string>

  <!-- SpanFragment -->
  <string name="span_sample_text">Sample Text</string>
  <string name="span_sample_text_paragraph">Sample \nText</string>

  <!-- NotificationFragment -->
  <string name="notice_basic">Basic</string>
  <string name="notice_basic_label">BasicNotification</string>
  <string name="notice_basic_description">BasicDescription</string>
  <string name="notice_action">Action</string>
  <string name="notice_action_label">ActionNotification</string>
  <string name="notice_action_description">ActionDescription</string>
  <string name="notice_direct">Direct</string>
  <string name="notice_direct_label">DirectNotification</string>
  <string name="notice_direct_description">DirectDescription</string>
  <string name="notice_progress">Progress</string>
  <string name="notice_progress_label">ProgressNotification</string>
  <string name="notice_progress_description">ProgressDescription</string>

  <!-- ListFragment -->
  <string name="list_all">すべて</string>

  <!-- GroupieFragment -->
  <string name="groupie_label">@string/playground_groupie_view</string>

  <!-- CameraFragment -->
  <string name="camera_folder_name">AndroidTechSample</string>

  <!-- ComposeFragment -->
  <string name="compose_playground">Playground</string>
  <string name="compose_ameba">Ameba</string>
  <string name="compose_ameba_follow_feed">FollowFeed</string>

</resources>
