<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:orientation="vertical">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/to_top_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_top_swipe" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/to_side_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_side_swipe" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/to_custom_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_custom_view" />
    </LinearLayout>

  </ScrollView>

</layout>

